re PR tree-optimization/23402 (error: statement makes a memory store, but has no V_MAY_DEFS nor V_MUST_DEFS)

2005-08-16  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/23402
        * gcc.c-torture/compile/zero-strct-3.c: New test.
        * gcc.c-torture/compile/zero-strct-4.c: New test.

2005-08-16  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/23402
        * gimplify.c (zero_sized_type): New function.
        (gimplify_modify_expr_rhs): If we have a zero sized type,
        replace the statement with an empty statement.

From-SVN: r103191